--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://github.com/shre000/EXPENSE-APP",
+    "homepage": "https://shre000.github.io/EXPENSE-APP/",
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
